--- a/index.html
+++ b/index.html
@@ -22,16 +22,33 @@
 		<div id="fall">
 			<ul>
 				<li id="wid"><a href="">Все</a></li>
-				<li><a href="">Картинки</a></li>
-				<li><a href="">Видео</a></li>
-				<li><a href="">Новости</a></li>
-				<li><a href="">Покупки</a></li>
+				<li><a href="https://www.google.ru/search?q=%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D1%82%D1%8C+%D1%8D%D1%82%D1%83+%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D1%83&newwindow=1&biw=1920&bih=927&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjPlaC_5orUAhUDiiwKHbhIAoMQ_AUICigB">Картинки</a></li>
+				<li><a href="https://www.google.ru/search?q=%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D1%82%D1%8C+%D1%8D%D1%82%D1%83+%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D1%83&newwindow=1&biw=1920&bih=927&source=lnms&tbm=vid&sa=X&ved=0ahUKEwjPlaC_5orUAhUDiiwKHbhIAoMQ_AUICygC">Видео</a></li>
+				<li><a href="https://www.google.ru/search?q=%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D1%82%D1%8C+%D1%8D%D1%82%D1%83+%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D1%83&newwindow=1&biw=1920&bih=927&source=lnms&tbm=nws&sa=X&ved=0ahUKEwjPlaC_5orUAhUDiiwKHbhIAoMQ_AUIDCgD">Новости</a></li>
+				<li><a href="https://www.google.ru/search?q=%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D1%82%D1%8C+%D1%8D%D1%82%D1%83+%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D1%83&newwindow=1&biw=1920&bih=927&source=lnms&tbm=shop&sa=X&ved=0ahUKEwjPlaC_5orUAhUDiiwKHbhIAoMQ_AUIDSgE">Покупки</a></li>
 				<li><a href="">Ёщё</a></li>
-				<li><a href="">Настройки</a></li>
+				<li><a href="https://www.google.ru/preferences">Настройки</a></li>
 				<li><a href="">Инструменты</a></li>
 			</ul>
 		</div>
 	</div>
-	<div id="footer"></div>
+	<div id=content></div>
+	<div id="footer">
+		<div id="top">
+			<p>р-н Коньково, Москва</p>
+			<p>На основе вашего IP-адреса</p>
+			<p><a href="">Учитывать моё местоположение</a></p>
+			<p><a href="">Подробнее...</a></p>
+		</div>
+		<div id="fall">
+			<ul>
+				<li><a href="">Справка</a></li>
+				<li><a href="">Отправить отзыв</a></li>
+				<li><a href="">Конфиденциальность</a></li>
+				<li><a href="">Условия</a></li>
+				<li><a href="">Перейти на Google.com</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
