create basic of Goooooogle table

--- a/index.html
+++ b/index.html
@@ -32,20 +32,44 @@
 			</ul>
 		</div>
 	</div>
+	<div id="rez">
+		<p>Результатов: примерно 16 500 000 (0,27 сек.) </p>
+	</div>
 	<div id=content></div>
+	<div id="google">
+		<table>
+			<tbody>
+				<tr>
+					<td><img src=""></td>
+					<td><span><img src=""></span>1</td>
+					<td><span><img src=""></span>2</td>
+					<td><span><img src=""></span>3</td>
+					<td><span><img src=""></span>4</td>
+					<td><span><img src=""></span>5</td>
+					<td><span><img src=""></span>6</td>
+					<td><span><img src=""></span>7</td>
+					<td><span><img src=""></span>8</td>
+					<td><span><img src=""></span>9</td>
+					<td><span><img src=""></span>10</td>
+					<td><img src=""></td>
+				</tr>
+			</tbody>
+		</table>
+		<span><p><a href="">Следующая</a></p></span>
+	</div>
 	<div id="footer">
 		<div id="top">
 			<p>р-н Коньково, Москва</p>
 			<p>На основе вашего IP-адреса</p>
 			<p><a href="">Учитывать моё местоположение</a></p>
-			<p><a href="">Подробнее...</a></p>
+			<p><a href="https://support.google.com/websearch/answer/179386?p=ws_settings_location&hl=ru&visit_id=0-636313226108085260-30241001&rd=1">Подробнее...</a></p>
 		</div>
 		<div id="fall">
 			<ul>
-				<li><a href="">Справка</a></li>
+				<li><a href="https://support.google.com/websearch/?visit_id=0-636313226108085260-30241001&hl=ru&rd=2#topic=3378866">Справка</a></li>
 				<li><a href="">Отправить отзыв</a></li>
-				<li><a href="">Конфиденциальность</a></li>
-				<li><a href="">Условия</a></li>
+				<li><a href="https://www.google.ru/intl/ru/policies/privacy/?fg=1">Конфиденциальность</a></li>
+				<li><a href="https://www.google.ru/intl/ru/policies/terms/regional.html">Условия</a></li>
 				<li><a href="">Перейти на Google.com</a></li>
 			</ul>
 		</div>
