The table of Goooooogle  was made, it turned out to be stupid but it's at least something

--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
 		<table>
 			<tbody>
 				<tr>
-					<td><img src=""></td>
-					<td><span><img src=""></span>1</td>
-					<td><span><img src=""></span>2</td>
-					<td><span><img src=""></span>3</td>
-					<td><span><img src=""></span>4</td>
-					<td><span><img src=""></span>5</td>
-					<td><span><img src=""></span>6</td>
-					<td><span><img src=""></span>7</td>
-					<td><span><img src=""></span>8</td>
-					<td><span><img src=""></span>9</td>
-					<td><span><img src=""></span>10</td>
-					<td><img src=""></td>
+					<td><img src="g_big.png" id="g_big"></td>
+					<td><a href=""><span><img src="o_red.png" class="o"></span>1</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>2</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>3</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>4</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>5</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>6</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>7</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>8</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>9</a></td>
+					<td><a href=""><span><img src="o_orange.png" class="o"></span>10</a></td>
+					<td><a href=""><img src="gle.png" id="gle"></td>
 				</tr>
 			</tbody>
 		</table>
-		<span><p><a href="">Следующая</a></p></span>
+		<span id="next"><p><a href="">Следующая</a></p></span>
 	</div>
 	<div id="footer">
 		<div id="top">
