--- a/index.html
+++ b/index.html
@@ -35,7 +35,65 @@
 	<div id="rez">
 		<p>Результатов: примерно 16 500 000 (0,27 сек.) </p>
 	</div>
-	<div id=content></div>
+	<div id=content>
+		<div class="site">
+			<div class="name"><a href="">Как сделать главную страницу Яндекса или Гугла стартовой, а ...</a></div>
+			<div class="href">ktonanovenkogo.ru/.../kak-sdelat-glavnuyu-stranicu-yandeksa-gugla-startovoj-etu-str...</div>
+			<div class="text">Как сделать главную страницу Яндекса или Гугла стартовой, а также любую страницу (например, эту) установить как домашнюю. 9 Фев ...</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">Стартовая и главная страницы в Chrome - Cправка - Google Chrome</a></div>
+			<div class="href">https://support.google.com/chrome/answer/95314?hl=ru</div>
+			<div class="text">В браузере Chrome можно настроить стартовую и главную страницу. Например, сделать их одинаковыми. Стартовая.</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">Как создать страницу - Cправка - Сайты</a></div>
+			<div class="href">https://support.google.com/sites/answer/98216?hl=ru</div>
+			<div class="text">Вы можете создать сайт с любым количеством страниц, но мы не ... Эту страницу можно настроить с помощью гаджетов на свое усмотрение. При этом ...</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">Создание Web-сайта. Недостающее руководство (3-е изд.):</a></div>
+			<div class="href">https://books.google.ru/books?isbn=5977508069</div>
+			<div class="text">Создание Fan-страницы Fan-страница — это страница Facebook, которая создается для ... Facebook делит эту страницу на две области (рис. 12.13).
+</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">HTML5. Недостающее руководство</a></div>
+			<div class="href">https://books.google.ru/books?isbn=5977508050</div>
+			<div class="text">11.1 показана веб-страница, которая просит веб-сервер выполнить простое ... 11.2) Прежде чем мы сможем создать эту страницу, нам понадобится ...</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">Скачать образ диска с Windows 10 (файл ISO) - Microsoft</a></div>
+			<div class="href">https://www.microsoft.com/ru-ru/software-download/windows10</div>
+			<div class="text">Вы были перенаправлены на эту страницу, поскольку операционная система, которую вы используете, не поддерживает средство для создания ...</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">Как создать свой сайт бесплатно самому от А до Я</a></div>
+			<div class="href">www.internet-technologies.ru/how-to-create-a-website.html
+</div>
+			<div class="text">Если Вы зашли на эту страничку, значит, перед Вами встал вопрос - как создать свой сайт. Мы рады помочь Вам в этом. Среди тех, кто недавно решил ...
+</div>
+		</div>
+		<div class="site">
+			<div class="name"><a href="">Профессиональная разработка приложений Excel</a></div>
+			<div class="href">https://books.google.ru/books?isbn=584591194X</div>
+			<div class="text">Создание вводного HTML-файла Для создания страниц файла справки вы ... Чтобы создать эту страницу, сгенерируйте новый HTML-файл и введите ...
+</div>
+		</div>
+	</div>
+	<div id="dop_poisk">
+		<ul>
+			<li><p id="vm">Вместе с создать эту страницу часто ищут</p></li>
+			<li><a href="">Яндекс главная страница открыть</a></li>
+			<li><a href="">сделать яндекс стартовой страницей автоматически</a></li>
+			<li><a href="">яндекс домашняя страница установить</a></li>
+			<li><a href="">яндекс стартовая страница установить</a></li>
+			<li><a href="">как сделать яндекс стартовой страницей в google chrome</a></li>
+			<li><a href="">яндекс стартовая страница сделать</a></li>
+			<li><a href="">www.yandex.ru стартовая страница</a></li>
+			<li><a href="">стартовая страница гугл хром</a></li>
+		</ul>
+	</div>
 	<div id="google">
 		<table>
 			<tbody>
